# personal-notes-assistant

./: .env.sample  .gitignore  LICENSE  README.md  docker-compose.yaml  main.py  mcp_handlers.py  pyproject.toml  rag_server.py
